# Hydride

./: .gitignore  .gitmodules  CREDITS.TXT  INSTALL.md  Makefile  README.md  README.md.old  dsl.rkt  exp1.rkt  exp_bitvector.rkt  inst_sema_examples.rkt  install.sh  intel_inst_sema.rkt  llvm_backend_build.sh  llvm_halide_builder.sh  setup.py  setup.sh  sketch.rkt  spec.rkt  timer.py  utils.rkt  x86_and hvx_insts_sema.rkt  x86_insts_sema.rkt
HVX_Examples/: halide_blur_128.s  matmul_hvx128.ll  matmul_hvx128.s
aiengine-automlir/: activate.sh  links.rktd
benchmarks/: .gitignore  Makefile  README.md
benchmarks/blur/: blur.json  (+6 more)
code-synthesizer/: concrete_cost.rkt  simple_cost.rkt
codegen-generator/tools/low-level-codegen/: CMakeLists.txt  Legalizer.h  RoseLegalizerGen.py  RoseLowLevelCodeGen.py  x86Legalizer.cpp
codegen-generator/tools/low-level-codegen/InstSelectors/aievec/: AIEVecLegalizer.cpp  RoseAIEVecLegalizerGen.py  aievec_add_wrappers.ll  aievec_wrappers.ll
codegen-generator/tools/low-level-codegen/InstSelectors/aievec/wrappers/: aievec_wrappers.ll
codegen-generator/tools/low-level-codegen/InstSelectors/arm/: .gitignore  ARMLegalizer.cpp  ARMSemantics.py  ARMsemantics.py  RoseARMLegalizerGen.py  arm_wrappers.c.ll
codegen-generator/tools/low-level-codegen/InstSelectors/bitsimd/: BitSIMDCEmitter.cpp  BitSIMDCEmitter.h  BitSIMDLegalizer.cpp  BitSIMDsema.py  RoseBitSIMDLegalizerGen.py  RoseBitSIMDLegalizerGenv2.py  bitsimd_wrappers.ll
codegen-generator/tools/low-level-codegen/InstSelectors/common/: Legalizer.cpp  Legalizer.h  libpimeval.h
codegen-generator/tools/low-level-codegen/InstSelectors/hexagon/: HexInstMappings.txt  HexLegalizer.cpp  HexLegalizerGeneric.cpp  HexLegalizer_new.cpp  RoseHexLegalizerGen.py  hexsemantics.py  hexsemantics_allargs.py  hexsemantics_new.py
codegen-generator/tools/low-level-codegen/InstSelectors/visa/: .gitignore  CMakeLists.txt  RoseVISALegalizerGen.py  VISALegalizer.cpp  VISALegalizer.cpp.inc  VISALegalizer.h  VISALegalizer.h.inc  VISALegalizerUtil.cpp  VISAWrapperGen.py  visa_wrapper.ll
codegen-generator/tools/low-level-codegen/InstSelectors/x86/: Legalizer.h  RoseX86LegalizerGen.py  x86Legalizer.cpp  x86LegalizerAllArgs.cpp
codegen-generator/tools/low-level-codegen/generated-files/: full_halide.ll  hydride.node.1.module.ll  hydride.node.1.rose.ll  legalized_hydride.ll
compiler-generator/: RoseAbstractions.py  RoseRegion.py  RoseUtilities.py  RoseValue.py
cost-experiements/: complex_cost.rkt  complex_cost_asserts.rkt  emina.rkt  layered_grammar.rkt
dsl-synthesizer-gen/: README.md  driver.py  dsl_class.py  dsl_inst_def.py  dsl_inst_selector.py  experiment_time.py  gen_dsl.py  iterative_synth.py  racket_utils.rkt  run_synth.py  tensor_dsl.py  tensor_grammar.rkt  tensor_spec.py  user_concolic.spec  user_concrete.spec  user_spec.py  utils.py
experiments/: dsl_synth.rkt  example.rkt  exp1.rkt  exp_bitvector.rkt  exp_bitvector2.rkt  exp_bitvector3.rkt  tensor_dsl_synth.rkt
halide-hydride/: Makefile  install.sh  test.rkt
hexagon-benchmarks/: .gitignore  README.md  autotune_all.sh  autotune_program.sh  gen_csv.sh  git_add_best.sh  pretrain_with_autotuning.sh  proc_common.cpp  proc_common.h  run.sh  run_all.sh  timings.csv
iterative_synths_experiments/: example_dsl.rkt  example_grammar.rkt  example_spec.rkt
legalizer-gen/: Legalizer.h  ReadME.md  dslinfo.py  equivalence-checker.py  equivalence_checker.py  intrinsic_gen.py  legalizer_gen.py  legalizer_generator.sh  legalizer_info.py  llvm_legalizer_gen.py  pattern_gen.py  slide_examples.rkt  tensor_dsl.py  tensor_dsl_gen.py  tensor_spec.rkt  test_tensor_dsl.py  utility.py  x86_sema.py  x86_sema.rkt
new_legalizer_gen/: dslinfo.py  equivalence_checker.py  intrinsic_gen.py  legalizer_gen.py  pattern_gen.py  tensor_dsl_gen.py  utility.py  utility.rkt  x86_sema.py
rose-IR/: DerivedRoseTypes.py  RoseAbstractions.py  RoseArgument.py  RoseBitVector.py  RoseBitVectorOperation.py  RoseBitVectorOperations.py  RoseBitVectorSlice.py  RoseBlock.py  RoseConstant.py  RoseConstants.py  RoseContext.py  RoseForLoop.py  RoseFunction.py  RoseFunctionCall.py  RoseIR.py  RoseLoop.py  RoseOpcode.py  RoseOperation.py  RoseOperations.py  RoseRegion.py  RoseType.py  RoseUtilities.py  RoseValue.py  RoseValues.py  Type.py
scaling-experiments/: gen_dsl.py  user_concrete.spec
swizzles/: swizzle_impl.rkt  swizzle_test.rkt
synth_benchmarks/: README.md
(+21126 files in other folders)
